# LLM-Battle-Arena

./: README.md  groq_call.py  main.py  parser.py  prompts.py  pyproject.toml
results/: agg_first_batch.json
results/llama_attacker/bat/: 0_conversation.json  1_conversation.json  2_conversation.json
results/llama_attacker/paris/: 0_conversation.json  1_conversation.json  2_conversation.json
results/llama_attacker/pitch/: 0_conversation.json  1_conversation.json  2_conversation.json
results/qwen_attacker/bat/: 0_conversation.json  1_conversation.json  2_conversation.json
results/qwen_attacker/paris/: 0_conversation.json  1_conversation.json  2_conversation.json
results/qwen_attacker/pitch/: 0_conversation.json  1_conversation.json  2_conversation.json
